tests/ui/lifetimes/copy_modulo_regions.stderr
error: lifetime may not live long enough
  --> $DIR/copy_modulo_regions.rs:12:5
   |
LL | fn foo<'a>() -> [Foo<'a>; 100] {
   |        -- lifetime `'a` defined here
LL |     [mk_foo::<'a>(); 100]
   |     ^^^^^^^^^^^^^^^^^^^^^ copying this value requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

